Projects/ControllerSDK/SDK_DLL/EventAttach/dhnetsdk.h

// 时间
typedef struct 
{
	DWORD				dwYear;					// 年
	DWORD				dwMonth;				// 月
	DWORD				dwDay;					// 日
	DWORD				dwHour;					// 时
	DWORD				dwMinute;				// 分
	DWORD				dwSecond;				// 秒
} NET_TIME,*LPNET_TIME;
// GPS状态信息
typedef struct _NET_GPS_STATUS_INFO
{
    NET_TIME			revTime;				    // 定位时间
	char				DvrSerial[50];			    // 设备序列号
    double				longitude;				    // 经度(单位是百万分之度，范围0-360度)
    double				latidude;				    // 纬度(单位是百万分之度，范围0-180度)
    double				height;					    // 高度(米)
    double				angle;					    // 方向角(正北方向为原点，顺时针为正)
    double				speed;					    // 速度(单位是海里，speed/1000*1.852公里/小时)
    WORD				starCount;				    // 定位星数
    BOOL				antennaState;			    // 天线状态(true 好，false 坏)
    BOOL				orientationState;		    // 定位状态(true 定位，false 不定位)
	BOOL                workStae;                   // 工作状态(0=未定位，1=非差分定位，2=差分定位，3=无效PPS，6=正在估算 

	int                 nAlarmCount;                // 发生的报警位置个数
	int                 nAlarmState[128];           // 发生的报警位置，值可能多个
	BYTE                bOffline;                   // 0-实时 1-补传 
	BYTE                byRserved[127];             // 保留字节
} NET_GPS_STATUS_INFO,*LPNET_GPS_STATUS_INFO;
// 电源类型
typedef enum __EM_POWER_TYPE
{
	EM_POWER_TYPE_MAIN = 0,							// 主电源
	EM_POWER_TYPE_BACKUP,							// 备用电源
}EM_POWER_TYPE;
// 电源故障事件类型
typedef enum __EM_POWERFAULT_EVENT_TYPE
{
	EM_POWERFAULT_EVENT_LOST = 0					// 电源掉电
}EM_POWERFAULT_EVENT_TYPE;
// 对讲发起方
typedef enum __EM_TALKING_CALLER
{
	EM_TALKING_CALLER_UNKNOWN = 0,				// 未知发起方
	EM_TALKING_CALLER_PLATFORM,					// 对讲发起方为平台
}EM_TALKING_CALLER;
// 传感器感应方式枚举类型
typedef enum tagNET_SENSE_METHOD
{
	NET_SENSE_UNKNOWN = -1,		//未知类型
	NET_SENSE_DOOR=0,			//门磁
	NET_SENSE_PASSIVEINFRA,		//被动红外
	NET_SENSE_GAS,				//气感
	NET_SENSE_SMOKING,			//烟感
	NET_SENSE_WATER,			//水感
	NET_SENSE_ACTIVEFRA,		//主动红外
	NET_SENSE_GLASS,			//玻璃破碎
	NET_SENSE_EMERGENCYSWITCH,	//紧急开关
	NET_SENSE_SHOCK,			//震动
	NET_SENSE_DOUBLEMETHOD,		//双鉴(红外+微波)
	NET_SENSE_THREEMETHOD,		//三技术
	NET_SENSE_TEMP,				//温度
	NET_SENSE_HUMIDITY,			//湿度
	NET_SENSE_CALLBUTTON,		//呼叫按钮
	NET_SENSE_OTHER,			//其他
	NET_SENSE_NUM,				//枚举类型总数
}NET_SENSE_METHOD;
// 卡状态
typedef enum tagNET_ACCESSCTLCARD_STATE
{
	NET_ACCESSCTLCARD_STATE_UNKNOWN = -1,
	NET_ACCESSCTLCARD_STATE_NORMAL = 0,             // 正常
	NET_ACCESSCTLCARD_STATE_LOSE   = 0x01,			// 挂失
	NET_ACCESSCTLCARD_STATE_LOGOFF = 0x02,			// 注销
	NET_ACCESSCTLCARD_STATE_FREEZE = 0x04,			// 冻结
}NET_ACCESSCTLCARD_STATE;
// 卡类型
typedef enum tagNET_ACCESSCTLCARD_TYPE
{
	NET_ACCESSCTLCARD_TYPE_UNKNOWN = -1,
	NET_ACCESSCTLCARD_TYPE_GENERAL, 			// 一般卡
	NET_ACCESSCTLCARD_TYPE_VIP,				    // VIP卡
	NET_ACCESSCTLCARD_TYPE_GUEST,				// 来宾卡
	NET_ACCESSCTLCARD_TYPE_PATROL,				// 巡逻卡
	NET_ACCESSCTLCARD_TYPE_BLACKLIST,			// 黑名单卡
	NET_ACCESSCTLCARD_TYPE_CORCE,				// 胁迫卡
	NET_ACCESSCTLCARD_TYPE_MOTHERCARD = 0xff,	// 母卡
}NET_ACCESSCTLCARD_TYPE;
// 门禁卡记录集信息
typedef struct tagNET_RECORDSET_ACCESS_CTL_CARD
{
	DWORD		dwSize;
	int			nRecNo;								// 记录集编号，只读
	NET_TIME	stuCreateTime;						// 创建时间
	char        szCardNo[DH_MAX_CARDNO_LEN];		// 卡号
	char        szUserID[DH_MAX_USERID_LEN];		// 用户ID
	NET_ACCESSCTLCARD_STATE		emStatus;			// 卡状态
	NET_ACCESSCTLCARD_TYPE		emType;				// 卡类型
	char		szPsw[DH_MAX_CARDPWD_LEN];			// 卡密码
	int			nDoorNum;							// 有效的门数目;
	int		    sznDoors[DH_MAX_DOOR_NUM];			// 有权限的门序号，即CFG_CMD_ACCESS_EVENT配置的数组下标
	int			nTimeSectionNum;					// 有效的的开门时间段数目
	int		    sznTimeSectionNo[DH_MAX_TIMESECTION_NUM];		// 开门时间段索引，即CFG_ACCESS_TIMESCHEDULE_INFO的数组下标
	int			nUserTime;							// 使用次数
	NET_TIME	stuValidStartTime;					// 开始有效期
	NET_TIME	stuValidEndTime;					// 结束有效期
	BOOL        bIsValid;							// 是否有效,true有效;false无效
}NET_RECORDSET_ACCESS_CTL_CARD;
// 门禁密码记录集信息
typedef struct tagNET_RECORDSET_ACCESS_CTL_PWD 
{
	DWORD		dwSize;
	int			nRecNo;							// 记录集编号，只读
	NET_TIME	stuCreateTime;					// 创建时间
	char        szUserID[DH_MAX_USERID_LEN];    // 用户ID
	char		szDoorOpenPwd[DH_MAX_CARDPWD_LEN];// 开门密码
	char		szAlarmPwd[DH_MAX_CARDPWD_LEN];	// 报警密码
	int			nDoorNum;					    // 有效的的门数目
	int		    sznDoors[DH_MAX_DOOR_NUM];		// 有权限的门序号，即CFG_CMD_ACCESS_EVENT配置CFG_ACCESS_EVENT_INFO的数组下标
}NET_RECORDSET_ACCESS_CTL_PWD;
// 开门方式(门禁事件,门禁出入记录,实际的开门方式)
typedef enum tagNET_ACCESS_DOOROPEN_METHOD
{
	NET_ACCESS_DOOROPEN_METHOD_UNKNOWN = 0,
	NET_ACCESS_DOOROPEN_METHOD_PWD_ONLY,		// 密码开锁
	NET_ACCESS_DOOROPEN_METHOD_CARD,			// 刷卡开锁
	NET_ACCESS_DOOROPEN_METHOD_CARD_FIRST,		// 先刷卡后密码开锁
	NET_ACCESS_DOOROPEN_METHOD_PWD_FIRST,		// 先密码后刷卡开锁
	NET_ACCESS_DOOROPEN_METHOD_REMOTE,			// 远程开锁，如通过室内机或者平台对门口机开锁
	NET_ACCESS_DOOROPEN_METHOD_BUTTON,			// 开锁按钮进行开锁
}NET_ACCESS_DOOROPEN_METHOD;
// 门禁刷卡记录记录集信息
typedef struct tagNET_RECORDSET_ACCESS_CTL_CARDREC
{
	DWORD		dwSize;
	int			nRecNo;							// 记录集编号，只读
	char		szCardNo[DH_MAX_CARDNO_LEN];	// 卡号
	char		szPwd[DH_MAX_CARDPWD_LEN];		// 密码
	NET_TIME	stuTime;						// 刷卡时间
	BOOL		bStatus;						// 刷卡结果，TRUE表示成功，FALSE表示失败
	NET_ACCESS_DOOROPEN_METHOD	emMethod;		// 开门方式
	int			nDoor;							// 门号，即CFG_CMD_ACCESS_EVENT配置CFG_ACCESS_EVENT_INFO的数组下标
}NET_RECORDSET_ACCESS_CTL_CARDREC;
// 假日记录集信息
typedef struct tagNET_RECORDSET_HOLIDAY
{
	DWORD		dwSize;
	int			nRecNo;				// 记录集编号，只读
	int			nDoorNum;		    // 有效的的门数目	
	int 		sznDoors[DH_MAX_DOOR_NUM];			// 有权限的门序号，即CFG_CMD_ACCESS_EVENT配置CFG_ACCESS_EVENT_INFO的数组下标
	NET_TIME	stuStartTime;		// 开始时间
	NET_TIME	stuEndTime;			// 结束时间
	BOOL        bEnable;            // 假期使能
}NET_RECORDSET_HOLIDAY;
// 门禁事件类型
typedef enum tagNET_ACCESS_CTL_EVENT_TYPE
{
	NET_ACCESS_CTL_EVENT_UNKNOWN = 0,
	NET_ACCESS_CTL_EVENT_ENTRY,					// 进门
	NET_ACCESS_CTL_EVENT_EXIT,					// 出门
}NET_ACCESS_CTL_EVENT_TYPE;
// 门禁卡记录查询条件
typedef struct
{
	DWORD                     dwSize;
	char                      szCardNo[DH_MAX_CARDNO_LEN];      // 卡号
	char                      szUserID[DH_MAX_USERID_LEN];      // 用户ID
	BOOL                      bIsValid;                         // 是否有效, TRUE:有效,FALSE:无效
}FIND_RECORD_ACCESSCTLCARD_CONDITION;