Projects/ControllerSDK/SDK_DLL/EntranceGuardDemo/WrapHolidays.h

extern "C" CLIENT_API BOOL CALL_METHOD WRAP_GetHolidayInfo(int lLoginID, int nRecordNo, NET_RECORDSET_HOLIDAY* result);
extern "C" CLIENT_API BOOL CALL_METHOD WRAP_RemoveHoliday(int lLoginID, int nRecordNo);
extern "C" CLIENT_API BOOL CALL_METHOD WRAP_RemoveAllHolidays(int lLoginID);
extern "C" CLIENT_API int CALL_METHOD WRAP_Get_HolidaysCount(int lLoginID);