Projects/ControllerSDK/ChilnaSKDDriver/SDK/NativeWrapper.cs


		[StructLayout(LayoutKind.Sequential)]
		public struct NET_RECORDSET_ACCESS_CTL_CARD
		{
			public Int32 dwSize;
			public Int32 nRecNo;
			public NET_TIME stuCreateTime;
			[MarshalAs(UnmanagedType.ByValArray, SizeConst = 32)]
			public Char[] szCardNo;
			[MarshalAs(UnmanagedType.ByValArray, SizeConst = 32)]
			public Char[] szUserID;
			public NET_ACCESSCTLCARD_STATE emStatus;
			public NET_ACCESSCTLCARD_TYPE emType;
			[MarshalAs(UnmanagedType.ByValArray, SizeConst = 64)]
			public Char[] szPsw;
			public Int32 nDoorNum;
			[MarshalAs(UnmanagedType.ByValArray, SizeConst = 32)]
			public Int32[] sznDoors;
			public Int32 nTimeSectionNum;
			[MarshalAs(UnmanagedType.ByValArray, SizeConst = 32)]
			public Int32[] sznTimeSectionNo;
			public Int32 nUserTime;
			public NET_TIME stuValidStartTime;
			public NET_TIME stuValidEndTime;
			public bool bIsValid;
		}

		[DllImport(@"EntranceGuardDemo.dll")]
		public static extern int WRAP_Insert_Card(int lLoginID, ref NET_RECORDSET_ACCESS_CTL_CARD stuCard);

		[DllImport(@"EntranceGuardDemo.dll")]
		public static extern bool WRAP_Update_Card(int lLoginID, ref NET_RECORDSET_ACCESS_CTL_CARD stuCard);

		[DllImport(@"EntranceGuardDemo.dll")]
		public static extern bool WRAP_RemoveCard(int lLoginID, int nRecordNo);

		[DllImport(@"EntranceGuardDemo.dll")]
		public static extern bool WRAP_RemoveAllCards(int lLoginID);

		[DllImport(@"EntranceGuardDemo.dll")]
		public static extern bool WRAP_GetCardInfo(int lLoginID, int recordNo, IntPtr result); // NET_RECORDSET_ACCESS_CTL_CARD

		[StructLayout(LayoutKind.Sequential)]
		public struct FIND_RECORD_ACCESSCTLCARD_CONDITION
		{
			public int dwSize;
			[MarshalAs(UnmanagedType.ByValArray, SizeConst = 32)]
			public char[] szCardNo;
			[MarshalAs(UnmanagedType.ByValArray, SizeConst = 32)]
			public char[] szUserID;
			public bool bIsValid;
		}

		[DllImport(@"EntranceGuardDemo.dll")]
		public static extern int WRAP_Get_CardsCount(int lLoginID, ref FIND_RECORD_ACCESSCTLCARD_CONDITION stuParam);

		[StructLayout(LayoutKind.Sequential)]
		public struct CardsCollection
		{
			public int Count;
			[MarshalAs(UnmanagedType.ByValArray, SizeConst = 1000)]
			public NET_RECORDSET_ACCESS_CTL_CARD[] Cards;
		}

		[DllImport(@"EntranceGuardDemo.dll")]
		public static extern bool WRAP_GetAllCards(int lLoginId, IntPtr result);
		#endregion

		#region CardRecs
		public enum NET_ACCESS_DOOROPEN_METHOD
		{
			NET_ACCESS_DOOROPEN_METHOD_UNKNOWN = 0,
			NET_ACCESS_DOOROPEN_METHOD_PWD_ONLY,
			NET_ACCESS_DOOROPEN_METHOD_CARD,
			NET_ACCESS_DOOROPEN_METHOD_CARD_FIRST,
			NET_ACCESS_DOOROPEN_METHOD_PWD_FIRST,
			NET_ACCESS_DOOROPEN_METHOD_REMOTE,
			NET_ACCESS_DOOROPEN_METHOD_BUTTON,
		}

		[StructLayout(LayoutKind.Sequential)]
		public struct NET_RECORDSET_ACCESS_CTL_CARDREC
		{
			public int dwSize;
			public int nRecNo;
			[MarshalAs(UnmanagedType.ByValArray, SizeConst = 32)]
			public char[] szCardNo;
			[MarshalAs(UnmanagedType.ByValArray, SizeConst = 64)]
			public char[] szPwd;
			public NET_TIME stuTime;
			public bool bStatus;
			public NET_ACCESS_DOOROPEN_METHOD emMethod;
			public int nDoor;
		}

		[DllImport(@"EntranceGuardDemo.dll")]
		public static extern int WRAP_Insert_CardRec(int lLoginID, ref NET_RECORDSET_ACCESS_CTL_CARDREC stuCardRec);

		[DllImport(@"EntranceGuardDemo.dll")]
		public static extern bool WRAP_Update_CardRec(int lLoginID, ref NET_RECORDSET_ACCESS_CTL_CARDREC stuCardRec);

		[DllImport(@"EntranceGuardDemo.dll")]
		public static extern bool WRAP_RemoveCardRec(int lLoginID, int nRecordNo);

		[DllImport(@"EntranceGuardDemo.dll")]
		public static extern bool WRAP_RemoveAllCardRecs(int lLoginID);

		[DllImport(@"EntranceGuardDemo.dll")]
		public static extern bool WRAP_GetCardRecInfo(int lLoginID, int recordNo, IntPtr result); // NET_RECORDSET_ACCESS_CTL_CARDREC

		[DllImport(@"EntranceGuardDemo.dll")]
		public static extern int WRAP_Get_CardRecordsCount(int lLoginID);

		[StructLayout(LayoutKind.Sequential)]
		public struct CardRecsCollection
		{
			public int Count;
			[MarshalAs(UnmanagedType.ByValArray, SizeConst = 1000)]
			public NET_RECORDSET_ACCESS_CTL_CARDREC[] CardRecs;
		}

		[DllImport(@"EntranceGuardDemo.dll")]
		public static extern bool WRAP_GetAllCardRecs(int lLoginId, IntPtr result);

		[StructLayout(LayoutKind.Sequential)]
		public struct CardRecordsCollection
		{
			int Count;
			[MarshalAs(UnmanagedType.ByValArray, SizeConst = 1000)]
			NET_RECORDSET_ACCESS_CTL_CARDREC[] CardRecords;
		};

		[DllImport(@"EntranceGuardDemo.dll")]
		public static extern bool WRAP_GetAllCardRecords(int lLoginId, IntPtr result);
		#endregion

		#region Passwords
		[StructLayout(LayoutKind.Sequential)]
		public struct NET_RECORDSET_ACCESS_CTL_PWD
		{
			public int dwSize;
			public int nRecNo;
			public NET_TIME stuCreateTime;
			[MarshalAs(UnmanagedType.ByValArray, SizeConst = 32)]
			public char[] szUserID;
			[MarshalAs(UnmanagedType.ByValArray, SizeConst = 64)]
			public char[] szDoorOpenPwd;
			[MarshalAs(UnmanagedType.ByValArray, SizeConst = 64)]
			public char[] szAlarmPwd;
			public int nDoorNum;
			[MarshalAs(UnmanagedType.ByValArray, SizeConst = 32)]
			public int[] sznDoors;
		}

		[DllImport(@"EntranceGuardDemo.dll")]
		public static extern int WRAP_Insert_Pwd(int lLoginID, ref NET_RECORDSET_ACCESS_CTL_PWD stuAccessCtlPwd);

		[DllImport(@"EntranceGuardDemo.dll")]
		public static extern bool WRAP_Update_Pwd(int lLoginID, ref NET_RECORDSET_ACCESS_CTL_PWD stuAccessCtlPwd);

		[DllImport(@"EntranceGuardDemo.dll")]
		public static extern bool WRAP_RemovePassword(int lLoginID, int nRecordNo);

		[DllImport(@"EntranceGuardDemo.dll")]
		public static extern bool WRAP_RemoveAllPasswords(int lLoginID);

		[DllImport(@"EntranceGuardDemo.dll")]
		public static extern bool WRAP_GetPasswordInfo(int lLoginID, int recordNo, IntPtr result); // NET_RECORDSET_ACCESS_CTL_PWD

		[DllImport(@"EntranceGuardDemo.dll")]
		public static extern int WRAP_Get_PasswordsCount(int lLoginID);

		[StructLayout(LayoutKind.Sequential)]
		public struct PasswordsCollection
		{
			public int Count;
			[MarshalAs(UnmanagedType.ByValArray, SizeConst = 1000)]
			public NET_RECORDSET_ACCESS_CTL_PWD[] Passwords;
		}

		[DllImport(@"EntranceGuardDemo.dll")]
		public static extern bool WRAP_GetAllPasswords(int lLoginId, IntPtr result);
		#endregion

		#region Holidays
		[StructLayout(LayoutKind.Sequential)]
		public struct NET_RECORDSET_HOLIDAY
		{
			public int dwSize;
			public int nRecNo;
			public int nDoorNum;
			[MarshalAs(UnmanagedType.ByValArray, SizeConst = 32)]
			public int[] sznDoors;
			public NET_TIME stuStartTime;
			public NET_TIME stuEndTime;
			public bool bEnable;
		}

		[DllImport(@"EntranceGuardDemo.dll")]
		public static extern int WRAP_Insert_Holiday(int lLoginID, ref NET_RECORDSET_HOLIDAY stuHoliday);

		[DllImport(@"EntranceGuardDemo.dll")]
		public static extern bool WRAP_Update_Holiday(int lLoginID, ref NET_RECORDSET_HOLIDAY stuHoliday);

		[DllImport(@"EntranceGuardDemo.dll")]
		public static extern bool WRAP_RemoveHoliday(int lLoginID, int nRecordNo);

		[DllImport(@"EntranceGuardDemo.dll")]
		public static extern bool WRAP_RemoveAllHolidays(int lLoginID);

		[DllImport(@"EntranceGuardDemo.dll")]
		public static extern bool WRAP_GetHolidayInfo(int lLoginID, int recordNo, IntPtr result); // NET_RECORDSET_HOLIDAY

		[DllImport(@"EntranceGuardDemo.dll")]
		public static extern int WRAP_Get_HolidaysCount(int lLoginID);
		#endregion

		#region TimeShedules
		[StructLayout(LayoutKind.Sequential)]
		public struct CFG_TIME_SECTION
		{
			public Int32 dwRecordMask;
			public Int32 nBeginHour;
			public Int32 nBeginMin;
			public Int32 nBeginSec;
			public Int32 nEndHour;
			public Int32 nEndMin;
			public Int32 nEndSec;
		}

		[StructLayout(LayoutKind.Sequential)]
		public struct CFG_ACCESS_TIMESCHEDULE_INFO
		{
			[MarshalAs(UnmanagedType.ByValArray, SizeConst = 7 * 4)]
			public CFG_TIME_SECTION[] stuTime;
			public bool bEnable;
		}

		[DllImport(@"EntranceGuardDemo.dll")]
		public static extern bool WRAP_GetTimeSchedule(int lLoginId, int index, out CFG_ACCESS_TIMESCHEDULE_INFO result);

		[DllImport(@"EntranceGuardDemo.dll")]
		public static extern bool WRAP_SetTimeSchedule(int lLoginId, int index, ref CFG_ACCESS_TIMESCHEDULE_INFO timeSheduleInfo);
		#endregion

		#region Events
		[UnmanagedFunctionPointer(CallingConvention.StdCall)]
		public delegate void WRAP_ProgressCallback(Int32 index);

		[DllImport(@"EntranceGuardDemo.dll")]
		public static extern bool WRAP_StartProgress(WRAP_ProgressCallback progressCallback);

		[DllImport(@"EntranceGuardDemo.dll")]
		public static extern bool WRAP_StartListen(int lLoginId);

		[StructLayout(LayoutKind.Sequential)]
		public struct NET_GPS_STATUS_INFO
		{
			NET_TIME revTime;
			[MarshalAs(UnmanagedType.ByValArray, SizeConst = 50)]
			char[] DvrSerial;
			double longitude;
			double latidude;
			double height;
			double angle;
			double speed;
			int starCount;
			bool antennaState;
			bool orientationState;
			bool workStae;
			int nAlarmCount;
			[MarshalAs(UnmanagedType.ByValArray, SizeConst = 128)]
			int[] nAlarmState;
			byte bOffline;
			[MarshalAs(UnmanagedType.ByValArray, SizeConst = 128)]
			byte[] byRserved;
		}

		public enum EM_TALKING_CALLER
		{
			EM_TALKING_CALLER_UNKNOWN = 0,
			EM_TALKING_CALLER_PLATFORM,
		}

		public enum NET_SENSE_METHOD
		{
			NET_SENSE_UNKNOWN = -1,
			NET_SENSE_DOOR = 0,
			NET_SENSE_PASSIVEINFRA,
			NET_SENSE_GAS,
			NET_SENSE_SMOKING,
			NET_SENSE_WATER,
			NET_SENSE_ACTIVEFRA,
			NET_SENSE_GLASS,
			NET_SENSE_EMERGENCYSWITCH,
			NET_SENSE_SHOCK,
			NET_SENSE_DOUBLEMETHOD,
			NET_SENSE_THREEMETHOD,
			NET_SENSE_TEMP,
			NET_SENSE_HUMIDITY,
			NET_SENSE_CALLBUTTON,
			NET_SENSE_OTHER,
			NET_SENSE_NUM,
		}

		public enum EM_POWER_TYPE
		{
			EM_POWER_TYPE_MAIN = 0,
			EM_POWER_TYPE_BACKUP,
		}

		public enum EM_POWERFAULT_EVENT_TYPE
		{
			EM_POWERFAULT_EVENT_LOST = 0
		}

		[StructLayout(LayoutKind.Sequential)]
		public struct WRAP_JournalItem
		{
			public int EventType;
			public NET_TIME DeviceDateTime;
			public NET_GPS_STATUS_INFO stGPSStatusInfo;
			public byte bEventAction;
			[MarshalAs(UnmanagedType.ByValArray, SizeConst = 128)]
			public char[] szInfo;
			public EM_TALKING_CALLER emCaller;
			public int nChannelID;
			public int nAction;
			public NET_SENSE_METHOD emSenseType;
			public int nBatteryLeft;
			public float fTemperature;
			[MarshalAs(UnmanagedType.ByValArray, SizeConst = 64)]
			public char[] szSensorName;
			public EM_POWER_TYPE emPowerType;
			public EM_POWERFAULT_EVENT_TYPE emPowerFaultEvent;
			public int nDoor;
			[MarshalAs(UnmanagedType.ByValArray, SizeConst = 128)]
			public char[] szDoorName;
			public NET_ACCESS_CTL_EVENT_TYPE emEventType;
			public bool bStatus;
			public NET_ACCESSCTLCARD_TYPE emCardType;
			public NET_ACCESS_DOOROPEN_METHOD emOpenMethod;
			[MarshalAs(UnmanagedType.ByValArray, SizeConst = 32)]
			public char[] szCardNo;
			[MarshalAs(UnmanagedType.ByValArray, SizeConst = 64)]
			public char[] szPwd;
		}

		[DllImport(@"EntranceGuardDemo.dll")]
		public static extern int WRAP_GetLastIndex();

		[DllImport(@"EntranceGuardDemo.dll")]
		public static extern bool WRAP_GetJournalItem(int index, out WRAP_JournalItem journalItem);
		#endregion
	}
}